static: add compose and scan cli plugins
Signed-off-by: CrazyMax <crazy-max@users.noreply.github.com>
Signed-off-by: Sebastiaan van Stijn <github@gone.nl>

--- a/static/Makefile
+++ b/static/Makefile
@@ -3,6 +3,8 @@ include ../common.mk
 CLI_DIR=$(realpath $(CURDIR)/../src/github.com/docker/cli)
 ENGINE_DIR=$(realpath $(CURDIR)/../src/github.com/docker/docker)
 BUILDX_DIR=$(realpath $(CURDIR)/../src/github.com/docker/buildx)
+COMPOSE_DIR=$(realpath $(CURDIR)/../src/github.com/docker/compose)
+SCAN_DIR=$(realpath $(CURDIR)/../src/github.com/docker/scan-cli-plugin)
 
 STATIC_VERSION=$(shell ./gen-static-ver $(CLI_DIR) $(VERSION))
 HASH_CMD=docker run -v $(CURDIR):/sum -w /sum debian:jessie bash hash_files
@@ -11,6 +13,8 @@ DIR_TO_HASH:=build/linux
 export CLI_DIR
 export ENGINE_DIR
 export BUILDX_DIR
+export COMPOSE_DIR
+export SCAN_DIR
 
 export STATIC_VERSION
 export CONTAINERD_VERSION
